Cypht: Add a way to search in sent mail

--- a/modules/core/site.css
+++ b/modules/core/site.css
@@ -312,3 +312,4 @@ div.unseen, .unseen .subject { font-weight: 700; }
     padding-bottom: 5px;
     background-color: #fff;
 }
+.sent_keyword { width: 120px; font-size: 75%; float: left; margin-top: 8px; }
